Fixed columns on mobile screens

--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@ li {
 
 .project_item img {
   flex: 1;
-  /*width: 50%;*/
+  min-width: 45%;
   max-height: 20em;
   object-fit: cover;
   object-position: 50% 50%;
@@ -53,11 +53,11 @@ li {
 .project_item div {
   flex: 1;
   /*margin: 1.2em;*/
-  /*width: 50%;*/
+  min-width: 45%;
 }
 
 .project_item div p {
-    padding: 3em;
+    padding: 1em;
 }
 
 /*.project_item img {
@@ -87,6 +87,10 @@ li {
   .project_div {
     margin-bottom: 3em;
   }
+
+  .project_item div p {
+    padding: 4em;
+}
 }
 
  /*style="border-radius: 0px; width: 500px; margin-left: auto; margin-right: auto;"*/
